[package]
name = "rusimg"
version = "0.1.0"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "A image processing CLI-tool/library for bmp, jpeg, png and webp."
license = "MIT"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
mozjpeg = { version = "0.10.9", optional = true }
oxipng = { version = "8.0.0", optional = true }
dep_webp = { version = "0.3.0", optional = true, package = "webp" }

clap = { version = "4.1.8", features = ["derive"], optional = true }
regex = { version ="1.7.2", optional = true }
viuer = { version ="0.7.1", optional = true }
glob = { version = "0.3.1", optional = true }
colored = { version = "2.0.4", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }
futures = { version = "0.3.30", optional = true }

[features]
default = ["bmp", "jpeg", "png", "webp"]
bmp = []
jpeg = ["mozjpeg"]
png = ["oxipng"]
webp = ["dep_webp"]
app = ["clap", "regex", "viuer", "glob", "colored", "tokio", "futures"]

[[bin]]
name = "rusimg"
path = "src/main.rs"
required-features = ["app"]
