[package]
name = "rusimg"
version = "0.1.0"
authors = ["yotio <yotio@yotiosoft.com>"]
description = "A image processing CLI-tool/library for bmp, jpeg, png and webp."
license = "MIT OR Apache-2.0"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librusimg = { git = "https://github.com/yotiosoft/librusimg.git" }
clap = { version = "4.1.8", features = ["derive"] }
regex = "1.7.2"
viuer = "0.9.1"
glob = "0.3.1"
colored = "3.0.0"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
image = "0.25.2"

[[bin]]
name = "rusimg"
